--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -8,10 +8,34 @@
     <tr *ngFor="let task of tasks">
       <td>{{ task.id }}</td>
       <td>{{ task.title }}</td>
-      <td>
-        <button class="btn btn-info">Detalhes</button>
+      <td>        
+        <button class="btn btn-primary" data-toggle="modal" data-target="#taskDetailModal" (click)="onSelect(task)">
+          <span class="glyphicon glyphicon-info-sign"></span>
+           Detalhes
+          </button>
+        
         <button class="btn btn-danger">Excluir</button>
       </td>
     </tr>
   </tbody>
 </table>
+
+<!-- Modal -->
+<div class="modal fade" id="taskDetailModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" *ngIf="selectedTask">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+          <h4 class="modal-title" id="myModalLabel">Detalhes da Tarefa: {{ selectedTask.title }}</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        
+      </div>
+      <div class="modal-body">
+        <input [(ngModel)]="selectedTask.title" class="form-control" type="text">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+        <button type="button" class="btn btn-primary">Salvar mudanças</button>
+      </div>
+    </div>
+  </div>
+</div>
