--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <navbar></navbar>
 
 <div class="container">
-  <tasks></tasks>
+  <router-outlet></router-outlet>
 </div>
 
-<learning-bindings></learning-bindings>
+
