--- a/src/app/tasks/task-detail/task-detail.component.html
+++ b/src/app/tasks/task-detail/task-detail.component.html
@@ -1,19 +1,17 @@
-<!-- Modal -->
-<div class="modal fade" id="taskDetailModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" *ngIf="task">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-            <h4 class="modal-title" id="myModalLabel">Detalhes da Tarefa: {{ task.title }}</h4>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          
-        </div>
-        <div class="modal-body">
-          <input [(ngModel)]="task.title" class="form-control" type="text">
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
-          <button type="button" class="btn btn-primary">Salvar mudanças</button>
-        </div>
-      </div>
+<h1 class="page-header">Detalhes da Tarefa: {{ task?.title }}</h1>
+
+<div class="form-horizontal" *ngIf="task">
+  <div class="form-group">
+    <label for="title" class="col-sm-2 control-label">Título</label>
+    <div class="col-sm-8">
+      <input [(ngModel)]="task.title" class="form-control" type="text">
     </div>
   </div>
+
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-8">
+      <button class="btn btn-default" (click)="goBack()">Voltar</button>
+      <button type="submit" class="btn btn-success">Salvar</button>
+    </div>
+  </div>
+</div>
