--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -9,10 +9,10 @@
       <td>{{ task.id }}</td>
       <td>{{ task.title }}</td>
       <td>        
-        <button class="btn btn-primary" data-toggle="modal" data-target="#taskDetailModal" (click)="onSelect(task)">
+        <a [routerLink]="['/tasks', task.id]" class="btn btn-info" style="margin-right: 7px">
           <span class="glyphicon glyphicon-info-sign"></span>
-           Detalhes
-          </button>
+          Detalhes
+        </a>
         
         <button class="btn btn-danger">Excluir</button>
       </td>
