--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,8 +1,12 @@
-<table class="table">
+<h1 class="page-header">Lista de Tarefas</h1>
+
+<table class="table">  
   <thead>
-    <th>Id</th>
-    <th>Títulos</th>
-    <th>Ações</th>
+    <tr>
+        <th>Id</th>
+        <th>Títulos</th>
+        <th>Ações</th>
+    </tr>
   </thead>
   <tbody>
     <tr *ngFor="let task of tasks">
