--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar navbar-dark bg-primary">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Alterna navegação">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Alterna navegação">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <a class="navbar-brand" href="#">Marca escondida</a>
+    <div class="collapse navbar-collapse" id="navbar">
+      <a class="navbar-brand" href="#">Task Manager</a>
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li><a class="nav-link" routerLink="/dashboard">Dashboard</a></li>             
-        <li><a class="nav-link" routerLink="/tasks">Tasks</a></li>             
+        <li routerLinkActive="active">
+          <a class="nav-link" routerLink="/dashboard">Dashboard</a>
+        </li>             
+        <li routerLinkActive="active">
+          <a class="nav-link" routerLink="/tasks">Tasks</a>
+        </li>             
 
       </ul>
       <form class="form-inline my-2 my-lg-0">
