--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,21 +1,37 @@
-<nav class="navbar navbar-expand-lg navbar navbar-dark bg-primary">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Alterna navegação">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbar">
-      <a class="navbar-brand" href="#">Task Manager</a>
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li routerLinkActive="active">
-          <a class="nav-link" routerLink="/dashboard">Dashboard</a>
-        </li>             
-        <li routerLinkActive="active">
-          <a class="nav-link" routerLink="/tasks">Tasks</a>
-        </li>             
-
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-      </form>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" routerLink="/">Task Manager</a>
     </div>
-  </nav>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div *ngIf="userSignedIn()" class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li routerLinkActive="active">
+          <a routerLink="/dashboard">Dashboard</a>
+        </li>
+        <li routerLinkActive="active">
+          <a routerLink="/tasks">Tarefas</a>
+        </li>
+      </ul>
+      
+      <div class="navbar-form navbar-left">
+        <task-search></task-search>
+      </div>
+
+      <div class="navbar-form navbar-right">
+        <button class="btn btn-danger" (click)="signOutUser()">
+          <span class="glyphicon glyphicon-log-out"></span>
+          Sair
+        </button>
+      </div>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
